--- a/index.html
+++ b/index.html
@@ -4,14 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <style>
-      h1 {
-        text-align: center;
-        color: brown;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1>HELLO GITHUB</h1>
+    <script src="index.js"></script>
   </body>
 </html>
