--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   </head>
   <body>
     <h1>HELLO GITHUB</h1>
+    <form action="">
+      <input type="email" placeholder="Enter your email" />
+      <input type="password" placeholder="Enter your password" />
+      <input type="submit" value="Login" />
+    </form>
     <script src="index.js"></script>
   </body>
 </html>
